# traffic-light-detection

./: CMakeLists.txt  README.md
executable/: CMakeLists.txt  get_point_color.cpp  traffic_light_detect.cpp  traffic_light_functions.cpp  traffic_light_functions.h
include/: MouseGetPoint.h  traffic_light_functions.h
src/: CMakeLists.txt
src/traffic_light_utils/: MouseGetPoint.cpp  traffic_light_functions.cpp
